objects/ssot__EducationalInfoRequest__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcademicDurationId__c</fullName>
        <label>Academic Duration</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AcademicDurationObject__c</fullName>
        <label>Academic Duration Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Category__c</fullName>
        <label>Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Educational Info Request Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Learning__c</fullName>
        <label>Learning</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Opportunity__c</fullName>
        <label>Opportunity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequesterId__c</fullName>
        <label>Requester</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubCategory__c</fullName>
        <label>Subcategory</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817645728_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EducationalInfoRequest_AcademicDurat_rel</label>
        <referenceTo>ssot__AcademicYear__dlm</referenceTo>
        <relationshipLabel>EducationalInfoRequest_AcademicDurat_rel</relationshipLabel>
        <relationshipName>rel_1719817645728_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817652506_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EducationalInfoRequest_AcademicDurat_rel</label>
        <referenceTo>ssot__AcademicTerm__dlm</referenceTo>
        <relationshipLabel>EducationalInfoRequest_AcademicDurat_rel</relationshipLabel>
        <relationshipName>rel_1719817652506_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817771525_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EducationalInfoRequest_RequesterId_m_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>EducationalInfoRequest_RequesterId_m_rel</relationshipLabel>
        <relationshipName>rel_1719817771525_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>